--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -349,6 +349,9 @@ map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
+map gw cd ~/Documents/cours/projet_recherche/
+map gW cd ~/Documents/cours/projet_recherche/montreal_database/mtl_trajets/
+map gd cd ~/Documents
 
 # External Programs
 map E  edit
