--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -207,7 +207,7 @@ status_time = *_214
 [completion]
 base_word_until_cursor = on
 command_inline = on
-default_template = "%(nicks)|%(irc_channels)"
+default_template = "%(perl_buddylist)|%(nicks)|%(irc_channels)|%(completion_script)"
 nick_add_space = on
 nick_case_sensitive = off
 nick_completer = ":"
@@ -218,6 +218,7 @@ partial_completion_command = off
 partial_completion_command_arg = off
 partial_completion_count = on
 partial_completion_other = off
+partial_completion_templates = "config_options"
 
 [history]
 display_default = 5
