weechat: misc, loger conf and irc conf

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -139,6 +139,7 @@ sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
 sasl_username = ""
+split_msg_max_length = 512
 ssl = off
 ssl_cert = ""
 ssl_dhkey_size = 2048
@@ -189,6 +190,7 @@ freenodeZ.msg_kick
 freenodeZ.msg_part
 freenodeZ.msg_quit
 freenodeZ.notify
+freenodeZ.split_msg_max_length
 freenode.addresses = "irc.freenode.net"
 freenode.proxy
 freenode.ipv6
@@ -229,6 +231,7 @@ freenode.msg_kick
 freenode.msg_part
 freenode.msg_quit
 freenode.notify
+freenode.split_msg_max_length
 oftcZ.addresses = "192.222.210.73/6607"
 oftcZ.proxy
 oftcZ.ipv6
@@ -269,3 +272,4 @@ oftcZ.msg_kick
 oftcZ.msg_part
 oftcZ.msg_quit
 oftcZ.notify
+oftcZ.split_msg_max_length
