--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -360,6 +360,8 @@ map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
 map yp shell -f echo -n %d/%f | xsel -i; xsel -o | xsel -i -b
 map yd shell -f echo -n %d    | xsel -i; xsel -o | xsel -i -b
 map yn shell -f echo -n %f    | xsel -i; xsel -o | xsel -i -b
+map <C-t> shell urxvt -cd %d &
+map <C-a> shell urxvt -cd %d -e ranger &
 
 # Filesystem Operations
 map =  chmod
