synergy: correct binding to shift screeen

--- a/synergy.conf
+++ b/synergy.conf
@@ -40,6 +40,6 @@ section: aliases
         gh0st
 end
 section: options
-    keystroke(alt+ctrl+h) = switchInDirection(left)
-    keystroke(alt+ctrl+l) = switchInDirection(right)
+    keystroke(alt+control+h) = switchInDirection(left)
+    keystroke(alt+control+l) = switchInDirection(right)
 end
