weechat,conf: buddy list organization and status bar

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -85,7 +85,7 @@ jump_previous_buffer_when_closing = on
 jump_smart_back_to_buffer = on
 key_bind_safe = on
 key_grab_delay = 800
-mouse = on
+mouse = off
 mouse_timer_delay = 100
 nick_color_force = ""
 nick_color_hash = djb2
@@ -261,7 +261,7 @@ buddylist.color_bg = default
 buddylist.color_delim = default
 buddylist.color_fg = default
 buddylist.conditions = ""
-buddylist.filling_left_right = vertical
+buddylist.filling_left_right = columns_vertical
 buddylist.filling_top_bottom = horizontal
 buddylist.hidden = on
 buddylist.items = "buddylist"
@@ -269,7 +269,7 @@ buddylist.position = left
 buddylist.priority = 0
 buddylist.separator = on
 buddylist.size = 0
-buddylist.size_max = 0
+buddylist.size_max = 18
 buddylist.type = root
 buffers.color_bg = default
 buffers.color_delim = default
@@ -362,7 +362,7 @@ status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = off
-status.items = "│[time],[buffer_last_number],[buffer_plugin],buffer_number+:+buffer_name+(buffer_modes)+{buffer_nicklist_count}+buffer_zoom+buffer_filter,scroll,[lag],[hotlist],completion,scroll"
+status.items = "│[time],[buffer_last_number],[buffer_plugin],[otr],buffer_number+:+buffer_name+(buffer_modes)+{buffer_nicklist_count}+buffer_zoom+buffer_filter,scroll,[lag],[hotlist],completion,scroll"
 status.position = bottom
 status.priority = 500
 status.separator = off
